--- a/index.html
+++ b/index.html
@@ -63,30 +63,36 @@
             <a href="./pages HTML/laPaletteDuGout.html">
                 <div class="restaurant__vignette">
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurantla palette du goût" />
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
                     <span>Nouveau</span>
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <div class="restaurant__vignette__details">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </a>
             <a href="./pages HTML/laNoteEnchantee.html">
                 <div class="restaurant__vignette">
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée " />
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
                     <span>Nouveau</span>
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <div class="restaurant__vignette__details">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </a>
             <a href="./pages HTML/aLaFrancaise.html">
                 <div class="restaurant__vignette">
                     <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant à la française" />
-                    <h3>À la française</h3>
-                    <p>Cité Rouge</p>
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <div class="restaurant__vignette__details">
+                        <h3>À la française</h3>
+                        <p>Cité Rouge</p>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </a>
             <a href="./pages HTML/leDeliceDesSens.html">
@@ -94,10 +100,12 @@
                     <img
                         src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="photo du restaurant le délice des sens" />
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
-                    <i class="fa-regular fa-heart"></i>
-                    <i class="fa-solid fa-heart"></i>
+                    <div class="restaurant__vignette__details">
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </a>
         </section>
