--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <title>ohmyfood</title>
     </head>
 
-    <header class="header--accueil">
-        <img src="./images/logo/ohmyfood.png" alt="logo du site" />
-    </header>
-
     <body>
+        <header class="header--accueil">
+            <img src="./images/logo/ohmyfood.png" alt="logo du site" />
+        </header>
+
         <section class="loader">
             <div class="loader__icone--visible">
                 <div class="loader__icone--hidden">
@@ -32,7 +32,7 @@
             <article class="localisation__find-restaurant">
                 <h2>Réserver le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'expection, selectionnés par nos soins.</p>
-                <a href="#"><button class="localisation__button">Explorer nos restaurants</button></a>
+                <button class="localisation__button">Explorer nos restaurants</button>
             </article>
         </section>
 
@@ -57,73 +57,75 @@
                 </div>
             </a>
         </section>
-        
+
         <section class="restaurant">
             <h2>Restaurants</h2>
-            <a href="./pages HTML/laPaletteDuGout.html">
-                <div class="restaurant__vignette">
+            <div class="restaurant__card">
+                <a href="./pagesHTML/laPaletteDuGout.html" class="restaurant__link">
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo du restaurantla palette du goût" />
                     <span>Nouveau</span>
-                    <div class="restaurant__vignette__details">
+                    <div class="restaurant__details">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
                     </div>
-                </div>
-            </a>
-            <a href="./pages HTML/laNoteEnchantee.html">
-                <div class="restaurant__vignette">
+                </a>
+                <label class="custom-checkbox">
+                    <input type="checkbox" />
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </label>
+            </div>
+            <div class="restaurant__card">
+                <a href="./pagesHTML/laNoteEnchantee.html" class="restaurant__link">
                     <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo du restaurant la note enchantée " />
                     <span>Nouveau</span>
-                    <div class="restaurant__vignette__details">
+                    <div class="restaurant__details">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
                     </div>
-                </div>
-            </a>
-            <a href="./pages HTML/aLaFrancaise.html">
-                <div class="restaurant__vignette">
+                </a>
+                <label class="custom-checkbox">
+                    <input type="checkbox" />
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </label>
+            </div>
+            <div class="restaurant__card">
+                <a href="./pagesHTML/aLaFrancaise.html" class="restaurant__link">
                     <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo du restaurant à la française" />
-                    <div class="restaurant__vignette__details">
+                    <div class="restaurant__details">
                         <h3>À la française</h3>
                         <p>Cité Rouge</p>
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
                     </div>
-                </div>
-            </a>
-            <a href="./pages HTML/leDeliceDesSens.html">
-                <div class="restaurant__vignette">
-                    <img
-                        src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                        alt="photo du restaurant le délice des sens" />
-                    <div class="restaurant__vignette__details">
+                </a>
+                <label class="custom-checkbox">
+                    <input type="checkbox" />
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </label>
+            </div>
+            <div class="restaurant__card">
+                <a href="./pagesHTML/leDeliceDesSens.html" class="restaurant__link">
+                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo du restaurant le délice des sens" />
+                    <div class="restaurant__details">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
                     </div>
-                </div>
-            </a>
+                </a>
+                <label class="custom-checkbox">
+                    <input type="checkbox" />
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-heart"></i>
+                </label>
+            </div>
         </section>
-    </body>
 
-    <footer>
-        <h1>ohmyfood</h1>
-        <a href="#">
-            <i class="fa-solid fa-utensils"></i>Proposer un restaurant
-        </a>
-        <a href="#">
-            <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
-        </a>
-        <a href="#">
-            Mentions légales
-        </a>
-        <a href="mailto:aymerickbatlogg@gmail.com">
-            Contact
-        </a>
-    </footer>
+        <footer>
+            <h1>ohmyfood</h1>
+            <a href="#"> <i class="fa-solid fa-utensils"></i>Proposer un restaurant </a>
+            <a href="#"> <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire </a>
+            <a href="#"> Mentions légales </a>
+            <a href="mailto:aymerickbatlogg@gmail.com"> Contact </a>
+        </footer>
+    </body>
 </html>
