--- a/pagesHTML/laNoteEnchantee.html
+++ b/pagesHTML/laNoteEnchantee.html
@@ -34,99 +34,99 @@
             <!-- first article gathering all item of menu's first part -->
             <article class="menu__part">
                 <h2>ENTRÉES</h2>
-                <div class="menu__vignette delay-1">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-1">
+                    <div class="menu__description">
                         <h3>Ravioles de foie gras</h3>
                         <p>Accompagnés de leur crème à la truffe</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>25€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>25€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
-                <div class="menu__vignette delay-2">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-2">
+                    <div class="menu__description">
                         <h3>Caviar osciètre</h3>
                         <p>Sur blini à la farine de blé noir</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>35€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>35€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
-                <div class="menu__vignette delay-3">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-3">
+                    <div class="menu__description">
                         <h3>Homard et espuma de potiron</h3>
                         <p>Mariné aux zestes d'orange</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>20€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>20€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
-                <div class="menu__vignette delay-4">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-4">
+                    <div class="menu__description">
                         <h3>Foie gras de canard cuit entier</h3>
                         <p>Confiture de figue et pain toasté</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>35€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>35€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
             </article>
 
             <!-- second article gathering all item of menu's second part -->
             <article class="menu__part">
                 <h2>PLATS</h2>
-                <div class="menu__vignette delay-5">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-5">
+                    <div class="menu__description">
                         <h3>Noix de coquilles Saint-Jacques</h3>
                         <p>Sur lit de purée de céleri-rave</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>40€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>40€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-6">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-6">
+                    <div class="menu__description">
                         <h3>Langoustine poêlée</h3>
                         <p>Purée de patate douce</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>35€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>35€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-7">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-7">
+                    <div class="menu__description">
                         <h3>Mijoté de queue de boeuf</h3>
                         <p>Et riz sauvage aux zestes de citron</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>44€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>44€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
             </article>
 
             <!-- third article gathering all item of menu's third part -->
             <article class="menu__part">
                 <h2>DESSERTS</h2>
-                <div class="menu__vignette delay-8">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-8">
+                    <div class="menu__description">
                         <h3>Macaron noisette et chocolat</h3>
                         <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>18€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>18€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-9">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-9">
+                    <div class="menu__description">
                         <h3>Baba au rhum revisité</h3>
                         <p>Avec son coulis de citron</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>18€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>18€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-10">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-10">
+                    <div class="menu__description">
                         <h3>Tarte au citron meringuée</h3>
                         <p>Déstructurée</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>23€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>23€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
             </article>
 
