--- a/pagesHTML/leDeliceDesSens.html
+++ b/pagesHTML/leDeliceDesSens.html
@@ -37,62 +37,62 @@
             <!-- first article gathering all item of menu's first part -->
             <article class="menu__part">
                 <h2>ENTRÉES</h2>
-                <div class="menu__vignette delay-1">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-1">
+                    <div class="menu__description">
                         <h3>Tartare de thon</h3>
                         <p>Assaisonné au yuzu</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>25€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>25€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-2">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-2">
+                    <div class="menu__description">
                         <h3>Bouchée de homard croustillant</h3>
                         <p>Et sa farandole de petits légumes</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>35€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>35€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-3">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-3">
+                    <div class="menu__description">
                         <h3>Velouté de cèpes</h3>
                         <p>Aux truffes</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>20€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>20€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
             </article>
 
             <!-- second article gathering all item of menu's second part -->
             <article class="menu__part">
                 <h2>PLATS</h2>
-                <div class="menu__vignette delay-4">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-4">
+                    <div class="menu__description">
                         <h3>Poulet rôti aux herbes de Provence</h3>
                         <p>Et sa crème de truffe</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>40€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>40€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-5">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-5">
+                    <div class="menu__description">
                         <h3>Langouste rôtie</h3>
                         <p>Et ses légumes de saison</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>35€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>35€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-6">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-6">
+                    <div class="menu__description">
                         <h3>Côte de boeuf Angus</h3>
                         <p>Et sa purée de panais</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>44€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>44€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
             </article>
 
@@ -100,31 +100,31 @@
             <article class="menu__part">
                 <h2>DESSERTS</h2>
 
-                <div class="menu__vignette delay-7">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-7">
+                    <div class="menu__description">
                         <h3>Farandole de desserts</h3>
                         <p>Du chef</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>18€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>18€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-8">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-8">
+                    <div class="menu__description">
                         <h3>Crème brulée</h3>
                         <p>Revisitée</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>22€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>22€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
 
-                <div class="menu__vignette delay-9">
-                    <div class="menu__vignette__description">
+                <div class="menu__card delay-9">
+                    <div class="menu__description">
                         <h3>Tiramisu</h3>
                         <p>À la noisette</p>
                     </div>
-                    <div class="menu__vignette__prix"><strong>23€</strong></div>
-                    <div class="menu__vignette__check"><i class="fas fa-check"></i></div>
+                    <div class="menu__prix"><strong>23€</strong></div>
+                    <div class="menu__check"><i class="fas fa-check"></i></div>
                 </div>
             </article>
 
