--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p class="localisation__ville"><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
             <article class="localisation__find-restaurant">
                 <h2>Réserver le menu qui vous convient</h2>
-                <p>Découvrez des restaurants d'expection, selectionnés par nos soins.</p>
+                <p>Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
                 <button class="localisation__button">Explorer nos restaurants</button>
             </article>
         </section>
